MooreGeoSolution/MooreGeoProject/public/StyleSheet.css
body{
    background-color: lightslategray;
}

#menuBar {
    display:block;
    padding:50px;
    width: 1000px;
    /*min-width: 1000px;*/
    /*max-width: 1000px;*/
}

.menuTab {
    /*width: 100px;*/
    max-width: 25%;
    padding: 30px;
    margin: 20px;
    background-color: papayawhip;
    border-color: black;
    border: outset;
    border-width: 5px;
    display:inline;
}

#wrapper {
    height: 90vh;
    width: 95vw;
    margin: auto;
}

div#game {
    width: 100%;
    height: 100%;
    text-align: center;
    margin: auto;
    align-content: center;
    align-self: center;
    margin-top: 3%;
    background-color: darkgray;
    
}

#timer {
    text-align: left;
    font-size: 200%;
    font-family: Impact;
    position: absolute; /*htmls layout wont take this element into an account when positioning other elements*/
    display: inline; /*https://www.w3schools.com/jsref/prop_style_display.asp*/
    /*padding-right: 45%; /*Hard coded --> can still be improved to be exactly in the middle*/
}

#centered {
    text-align: center;
}

#commonTarget {
    /*width: 15px;
    height: 15px;*/
    /*background-color: mintcream;*/
    background-color: chartreuse;
    position: absolute;
}

.target {
    animation-duration: 10s;
    width:20px;
    height:20px;
    width: 50px;
    height: 50px;
    background-color: red;
    position: relative;

    animation-name: inSquare;
    animation-duration: 5s;
    animation-timing-function: linear;
    animation-delay: 2s;
    animation-iteration-count: infinite;
    animation-direction: alternate;
}

@keyframes inSquare {
    0% {
        background-color: black;
        left: 0px;
        top: 0px;
    }

    25% {
        background-color: yellow;
        left: 200px;
        top: 0px;
    }

    50% {
        background-color: blue;
        left: 200px;
        top: 200px;
    }

    75% {
        background-color: green;
        left: 0px;
        top: 200px;
    }

    100% {
        background-color: red;
        left: 0px;
        top: 0px;
    }
}

